# TopSpin

./: .gitignore  MANIFEST.in  README.chiero.md  README.install.md  README.md  README.palframe.command.md  README.palframe.estimator7.md  README.palframe.md  README.palframe.supplement.md  pyproject.toml  requirements.txt  setup.cfg  setup.py
doc/: ModelBase.md  ParamBase.md  PredictorBase.md  README.example.md  README.install.md  TrainerBase.md
example/cv/edsr/: dataset.py  dataset_TEST.py  header.py  model.py  model_wrapper.py  param.py  predict.py  train.py  train_starter.py
example/nlp/intent_detection/: dataset.py  make_features.py  make_features_spark.py  model.py  model_wrapper.py  param.py  predict.py  train.py  train_auto_starter.py  train_dist_starter.py
example/nlp/tokenization/: tokenizer.py  tokenizer_TEST.py
example/nlp/tokenizer/: tokenizer.py  tokenizer_TEST.py
example/regression/boston_predict/: README.MD  evaluate.py  train.py
example/spark/: count_word.py
example/speech/speaker_change/: __init__.py  dataset.py  make_features.py  model.py  model_wrapper.py  param.py  predict.py  train.py  train_starter.py
figure/: logo.key  palframe_structure.key
palframe/: __init__.py  __version__.py  chinese.py  chinese_TEST.py  email_notifier.py  english.py  figure_drawer.py  measure.py  measure_TEST.py  nlp.py  nlp_TEST.py  spark_helper.py  vob.pydict  vocabulary.py  vocabulary2.py  vocabulary2_TEST.py  vocabulary_TEST.py
palframe/alg/: disjoint_set.py  dynamic_heap.py  heap.py  linked_list.py  tree_map.py
palframe/audio/: acoustic_feature.py  acoustic_feature_TEST.py  audio_helper.py  audio_helper_TEST.py  microphone.py  microphone_TEST.py  paii-nlp-service-2eea7bc1f421.json
palframe/audio/api/: asr_google.py  asr_google_TEST.py  speech_recognition.py  speech_recognition_TEST.py  tts_xunfei.py  tts_xunfei_TEST.py
palframe/audio/tf_1x/: acoustic_feature_tf.py  acoustic_feature_tf_TEST.py
palframe/command_tools/: launch.py
palframe/data_pipeline/: __init__.py
palframe/data_pipeline/pt/: __init__.py  dataset.py  framework.py  framework_TEST.py  framework_example.py  starter.py
palframe/pytorch/: __init__.py  lamb_optimizer.py  nlp_torch.py
palframe/pytorch/dataset/: helper.py  (+5 more)
palframe/tf_1x/: __init__.py  lamb_optimizer.py  nlp_tf.py  nlp_tf_TEST.py  text_cnn.py
palframe/tf_2x/: __init__.py  attention.py  lamb_optimizer.py  nlp_tf.py  nlp_tf_TEST.py  rnn_block.py  text_cnn.py  transformer.py
palframe/translation/: ZSProject-94cb8e930aab.json  __init__.py
palframe/web/: news_scraper.py  news_scraper_TEST.py
src/palframe/: __init__.py  measure.py  measure_TEST.py  nlp.py  nlp_TEST.py
src/topspin/: __init__.py  figure_drawer.py  helper.py  helper_TEST.py  measure.py  measure_TEST.py  nlp.py  nlp_torch.py  nn_helper.py  version.py
(+297 files in other folders)
