[project]
name = "09-topspin"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "filelock==3.7.1",
    "h5py==3.9.0",
    "matplotlib==3.4.1",
    "numpy==1.23.4",
    "nvidia-ml-py3==7.352.0",
    "packaging>=25.0",
    "protobuf==3.20.*",
    "psutil==5.7.2",
    "python-algorithm-pyal>=1.3.5",
    "pytorch-transformers==1.2.0",
    "pytz>=2025.2",
    "tensorboard==2.3.0",
    "topspin>=1.2.1",
    "torch==2.2.2",
]
