[metadata]
name = TopSpin
authors = Summer Xia
author_email = tianxia0209@gmail.com
version = 1.1.4
description = A high-level distributed Deep Learning training framework, based on PyTorch, with extral support of parameter searching.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/SummerRainET2008/TopSpin
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >= 3.6

[options.packages.find]
where = src
