[metadata]
name = TopSpin
authors = Summer Xia
author_email = tianxia0209@gmail.com
version = 1.2.1
description = A PyTorch based high-level Deep Learning training framework. Seamlessly switch between single-GPU and multi-server; Supports gradient accumulation, learning rate warmup and decay, early stop, mixed precision training, and AutoML.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/SummerRainET2008/TopSpin
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >= 3.8

[options.packages.find]
where = src
